--- a/index.html
+++ b/index.html
@@ -21,11 +21,66 @@
          <h1 class="banner-title">specially crafted tea</h1>
          <a href="skills.html" class="banner-btn">explore</a>
       </div>
-
-
-
     </header>
 
     <!-- end-header -->
+    <!-- content-divider -->
+    <div class="content-divider"></div>
+    <!-- end of content-divider -->
+
+    <!-- skills -->
+    <section class="skills clearfix">
+      <!-- skill 1 -->
+      <article class="skill">
+        <span class = "skill-icon">
+          <i class="fas fa-mug-hot"></i>
+        </span>
+        <h3 class="skill-title">Made in US</h3>  
+        <p class="skill-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, fugiat.
+        </p>       
+      </article>
+      <!-- end of skill 1 -->
+
+      <!-- skill 2 -->
+      <article class="skill">
+        <span class = "skill-icon">
+          <i class="fas fa-glass-cheers"></i>
+        </span>
+        <h3 class="skill-title">relaxation</h3>  
+        <p class="skill-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, fugiat.
+        </p>       
+      </article>
+      <!-- end of skill 2 -->
+
+      <!-- skill 3 -->
+      <article class="skill">
+        <span class = "skill-icon">
+          <i class="fas fa-bomb"></i>
+        </span>
+        <h3 class="skill-title">energy</h3>  
+        <p class="skill-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, fugiat.
+        </p>       
+      </article>
+      <!-- end of skill 3 -->
+
+      <!-- skill 4 -->
+      <article class="skill">
+        <span class = "skill-icon">
+          <i class="fas fa-mortar-pestle"></i>
+        </span>
+        <h3 class="skill-title">family recipe</h3>  
+        <p class="skill-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, fugiat.
+        </p>       
+      </article>
+      <!-- end of skill 4 -->
+
+    </section>
+
+    <!-- end of skills -->
+    
   </body>
 </html>
